@@ -643,11 +643,32 @@ Hide buttons in the tabbar.
 .Op Cm hideButtons
 .
 .It Fl het Ar string
-Message to display on tab title when a terminal is held open after the child process exits.
+Message to display in tabs after the child process exits. (This string is escape and percent interpolated).
 .Op Cm holdExitText
 .
-.BO hold
-hold the terminal when the child process in it exits
+.It Fl heT Ar string
+Set the title of tabs to
+.Ar string
+after the process in the tab exits. (This string is escape and percent interpolated).
+.Op Cm holdExitTitle
+.
+.It Fl hold Ar status
+Hold the tab open after the child process in it exits.
+.Ar status
+can be
+.Ar Always , Clean , NotClean , Never
+to hold the tab open based on the exit status of the child program.
+.Pp
+NOTE: In previous versions of
+.Nm
+this was a boolean option. For backward compatibility, the value of
+.Ar True , 1 , On
+will be treated as
+.Ar Always
+and anything illegal will be treated as
+.Ar Never .
+The default is
+.Ar Clean .
 .Op Cm holdExit
 .
 .BO ht
@@ -698,7 +719,7 @@ in profile
 When a new tab is created with profile
 .Ar N
 it uses all options that are set for this profile. Currently the only options that can be set per profile are
-.Cm Pixmap , background , command , foreground , saveLines , tabTitle 
+.Cm Pixmap , background , command , foreground , saveLines , holdExit , holdExitText , holdExitTitle , tabTitle 
 and
 .Cm workingDirectory .
 Then all the settings from that profile number are used.
@@ -1547,7 +1568,7 @@ Toggle pseudo transparency.
 Toggle broadcasting of input to all tabs.
 .\" ------------------------------------------------------------
 .It Ic ToggleHold
-Toggle holding of exited tabs.
+Close all tabs who's child processes have exited.
 .\" ------------------------------------------------------------
 .It Ic ToggleFullscreen
 Toggle between full screen and regular mode. Also enable
@@ -1607,10 +1628,20 @@ Control-@, Control-A ...
 Text selected in the
 .Nm
 window.
+.It Sy %S
+If the process in this tab is dead, then it expands to the exit status of the child process. Otherwise left unchanged.
 .It Sy %n
-Number of the active tab.
+Tab number.
+.It Sy % Ns Sy N
+Expands to
+.Sq normally
+if the process exited normally (e.g. by calling
+.Xr exit 1 )
+or
+.Sq abnormally
+otherwise. (Note this is independent of the exit status).
 .It Sy %t
-Title of the active tab.
+Tab title.
 .El
 .Ed
 .Ss Mouse shortcuts \"{{{2
